css-exercise-four/css/style.css
/** border: 5px solid #000000; **/

*, *:before, *:after {
  box-sizing: border-box;
}

body {
  background-color: #dadada;
  font-size: 20px;
}

.preview_baku {
  background-image: url(../images/baku.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
}

.preview_london {
  background-image: url(../images/london.png);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
}

.preview_madrid {
  background-image: url(../images/madrid.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
}

.preview_rome {
  background-image: url(../images/rome.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center top;
}

.container > h1 {
  font-size: 14px;
  font-family: Open Sans;
  letter-spacing: 4px;
  padding: 40px;
  text-transform: uppercase;
  text-align: center;
}

div {
  width: 100%;
  height: 300px;
  margin: 0px 0px 20px 0px;
}

div > h1 {
  font-family: serif;
  text-transform: capitalize;
  margin: 40px 0px 0px 40px;
  position: absolute;
}

/* code added to create two-column design (TABLET) */

@media screen and (min-width: 575px)
{
  div {
    float: left;
    margin: 0px 0px 20px 20px;
    width: 46%;
    height: 200px;
  }

  section:after {
    content: "";
    display: table;
    clear: both;
  }
}

/* code added to create 4-column design (DESKTOP) */

@media screen and (min-width: 991px)
{
    div {
      float: left;
      margin: 0px 0px 20px 50px;
      width: 22%;
      height: 300px;
    }

    section:after {
      content: "";
      display: table;
      clear: both;
    }
}

